# QT-AGENTICAI-RAG

./: .gitignore
RAG/aws-hello-langchain/: main.py  pyproject.toml
RAG/gcp-hello-langchain/: .gitignore  README.md  main.py  pyproject.toml
RAG/hello-langchain/: README.md  pyproject.toml
RAG/hello-langchain/notebooks/: chains.ipynb  hello-langchain.ipynb  multidocs-indexing.ipynb  simple-indexing.ipynb  simple-rag-1.ipynb
RAG/hello-langchain/notebooks/concepts/: acceleration.txt  force.txt  motion.txt  velocity.txt  work.txt
RAG/hello-langchain/notebooks/data/: policies.txt
RAG/hello-langchain/notebooks/docs/: 1.txt  2.txt
